--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REscolar</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <style>
+        body{
+            background: rgb(158, 252, 158);
+        }
+        .image{
+            width: 300px;
+            height: 200px;
+        }
+        #carousel{
+            text-align: justify;
+        }
+    </style> 
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="logo"><img id="logo" src="./img/logo_gastao.png" alt="sexo"></a>
+        <a href="index.html" class="logo"><img id="logo" src="./img/Screenshot_20230814_091059_Samsung Notes.jpg" alt="sexo"></a>
         <span class="titulo_desktop">Reciclagem Escolar</span>
         
         <input type="checkbox" class="side-menu" id="side-menu">
@@ -17,9 +29,7 @@
             <ul class="menu">
                 <li><a href="index.html">Reciclagem</a></li>
                 <li><a href="index2.html">Na escola</a></li>
-                <li><a href="#">link 3</a></li>
-                <li><a href="#">link 4</a></li>
-                <li><a href="#">link 5</a></li>
+                <li><a href="index3.html">Benefícios</a></li>
             </ul>
         </nav>
     </header>
@@ -31,11 +41,11 @@
   <input type="radio" name="position" />
   <input type="radio" name="position" />
   <main id="carousel">
-    <div class="item"><b>Como as escolas poderiam ajudar?</b><br><p>As escolas sempre tiveram um papel importante na educação, compartilhando ideias, apresentando o conceito de reciclagem e incentivando ações favoráveis ao meio ambiente. Então existem atitudes que as escolas podem realizar que melhoram essa área tanto em rlação ao ambiente escolar quanto ao meio ambiente.</p></div>
-    <div class="item">Algumas das ações que podem ser tomadas são:<br><b>Aula de educação ambiental:</b><br>Muitas escolas já contam com lixeiras coloridas para a separação do lixo. Porém, é sempre mais motivador respeitar essa orientação quando se compreende as suas razões. Por isso, é importante que os estudantes aprendam que a instituição precisa da ajuda de todos para separar os materiais e enviá-los para a reciclagem.</div>
-    <div class="item"><b>Adoção de medidas sustentáveis em sala de aula</b><br>O exemplo é um ótimo recurso para a aprendizagem. A introdução de medidas sustentáveis em sala de aula contribui para que os estudantes aprendam novos hábitos e se tornem mais conscientes da importância de dar atenção às suas ações no dia a dia.</div>
-    <div class="item"><b>Jogos feitos de materiais recicláveis</b><br>Os jogos podem ser grandes aliados da aprendizagem e o benefício pode ser ainda maior se os estudantes participarem da confecção do brinquedo educativo. </div>
-    <div class="item"><b>Projeto ou gincana de reciclagem na escola</b><br>Escola também pode propor projetos ou gincanas de reciclagem. É possível envolver diferentes turmas e séries, fazendo separação por classe ou até por equipes. A ideia, em essência, é incentivar o recolhimento de materiais recicláveis, dando prêmios àqueles que juntarem um volume maior desses materiais.</div>
+    <div class="item"><img class="image" src="./img/escola.jpg"><b>Como as escolas poderiam ajudar?</b><br><p>As escolas sempre tiveram um papel importante na educação, compartilhando ideias, apresentando o conceito de reciclagem e incentivando ações favoráveis ao meio ambiente. Então existem atitudes que as escolas podem realizar que melhoram essa área tanto em rlação ao ambiente escolar quanto ao meio ambiente.</p></div>
+    <div class="item">Algumas das ações que podem ser tomadas são:<br><b>Aula de educação ambiental:</b><br>Muitas escolas já contam com lixeiras coloridas para a separação do lixo. Porém, é sempre mais motivador respeitar essa orientação quando se compreende as suas razões. Por isso, é importante que os estudantes aprendam que a instituição precisa da ajuda de todos para separar os materiais e enviá-los para a reciclagem.<img class="image" src="./img/aula.avif"></div>
+    <div class="item"><img class="image" src="./img/acoes.jpeg"><b>Adoção de medidas sustentáveis em sala de aula</b><br>O exemplo é um ótimo recurso para a aprendizagem. A introdução de medidas sustentáveis em sala de aula contribui para que os estudantes aprendam novos hábitos e se tornem mais conscientes da importância de dar atenção às suas ações no dia a dia.</div>
+    <div class="item"><b>Jogos feitos de materiais recicláveis</b><br>Os jogos podem ser grandes aliados da aprendizagem e o benefício pode ser ainda maior se os estudantes participarem da confecção do brinquedo educativo.<img class="image" src="./img/jogos.png"> </div>
+    <div class="item"><img class="image" src="./img/noticia_gincana_640_x_360-removebg-preview.png"><b>Projeto ou gincana de reciclagem na escola</b><br>Escola também pode propor projetos ou gincanas de reciclagem. É possível envolver diferentes turmas e séries, fazendo separação por classe ou até por equipes. A ideia, em essência, é incentivar o recolhimento de materiais recicláveis, dando prêmios àqueles que juntarem um volume maior desses materiais.</div>
     <main>
     </div>
 
