--- a/index3.html
+++ b/index3.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REscola</title>
+    <title>REscolar</title>
     <link rel="stylesheet" href="./styles/style.css">
     <style>
         body{
-            background: rgb(158, 252, 158);
-        }
-        .image{
-            width: 300px;
-            height: 300px;
+            background: rgb(158, 252, 158);;
         }
         #carousel{
             text-align: justify;
         }
-    </style> 
+        .image{
+            width: 300px;
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -41,11 +41,11 @@
   <input type="radio" name="position" />
   <input type="radio" name="position" />
   <main id="carousel">
-    <div class="item"><img class="image" src="./img/reciclagem1.png"> A reciclagem é uma forma de reaproveitamento das matérias primas que são descartadas. Nesse sentido, reciclar significa diminuir a quantidade de resíduos provenientes dos produtos pelo homem.</div>
-    <div class="item">Existem postos de reciclagem que servem para a separação dos resíduos, e podem estar dispostos em lixeiras com diferentes cores. As principais são: <img class="image" src="./img/lixeiraAzul-removebg-preview.png"><b>Azul:</b>Destinado aos papéis e papelões.</div>
-    <div class="item"><img class="image" src="./img/lixeiraVerde-removebg-preview.png"><b>Verde:</b>Destinado aos vidros.</div>
-    <div class="item"><img class="image" src="./img/lixeiraVermelha-removebg-preview.png"><b>Vermelho:</b>Destinado aos plásticos.</div>
-    <div class="item"><img class="image" src="./img/lixeiraAmarela-removebg-preview.png"><b>Amarelo:</b>Destinado aos metais.</div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
     <main>
     </div>
 
