--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="menu">
                 <li><a href="index.html">Reciclagem</a></li>
                 <li><a href="index2.html">Na escola</a></li>
-                <li><a href="index3.html">Benefícios</a></li>
+                <li><a href="index3.html">Benefícios/projetos</a></li>
             </ul>
         </nav>
     </header>
