--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,11 @@
         }
         .image{
             width: 300px;
-            height: 200px;
+            height: 175px;
+        }
+        .lista{
+            list-style-type: circle;
+            margin-left: 20px;
         }
     </style>
 </head>
@@ -29,7 +33,7 @@
             <ul class="menu">
                 <li><a href="index.html">Reciclagem</a></li>
                 <li><a href="index2.html">Na escola</a></li>
-                <li><a href="index3.html">Benefícios</a></li>
+                <li><a href="index3.html">Benefícios/projetos</a></li>
             </ul>
         </nav>
     </header>
@@ -41,11 +45,62 @@
   <input type="radio" name="position" />
   <input type="radio" name="position" />
   <main id="carousel">
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item"><b>Quais os benefícios da reciclagem?</b>
+        <br>
+        A reciclagem propicia muitos benefícios para o ser humano e para o meio ambiente. Alguns deles são:
+        <br>
+        <i>Redução da emissão de gás carbônico:</i>
+        A reciclagem usa menos energia no processamento e no fornecimento de novas matérias-primas, o que significa menos emissões de gás carbônico. E também diminui os gases do efeito estufa, reduzindo os impactos negativos das mudanças climáticas.
+        <br>
+        <i>Diminui custos:</i>
+        A reciclagem ajuda a diminuir gastos nas gestões pública e privada. Em que as prefeituras economizam com limpeza urbana, na construção de aterros sanitários e no tratamento de doenças, e as indústrias economizam a energia elétrica necessária para fazer novos produtos a partir de matéria-prima bruta.
+        <br>
+        <i>Gera renda:</i>
+        Além de fazer bem ao meio ambiente e a população, a reciclagem também gera renda, em que as cooperativas de catadores conseguem, ao longo dos anos, um faturamento crescente com ganhos de produtividade.
+    </div>
+    
+    <div class="item"><b>Quais as vantagens no ambiente escolar?</b>
+        <br>
+        Como visto anteriormente, o processo de reciclagem gera uma série de benefícios para todos, sendo assim, traz também inúmeras vantagens para uma escola, em que podemos citar:
+        <br>
+        <ul class="lista">
+            <li>Melhoramento no processo de limpeza do ambiente escolar;</li>
+            <li>Cria no aluno o hábito de separar o lixo;</li>
+            <li>Conscientiza o aluno em relação ao ato de jogar lixo em vias públicas;</li>
+            <li>Diminui o desperdício;</li>
+            <li>Auxilia no processo de limpeza da cidade;</li>
+            <li>Combate a poluição.</li>
+        </ul>
+        <img class="image" src="./img/school.jpg" alt="">
+    </div>
+    
+    <div class="item">
+        <b>Projetos</b>
+        <br>
+        Existem também alguns projetos que promovem a reciclagem, alguns deles são:
+        <br>
+        <i>Programa Câmbio verde - Curitiba:</i> <!-- https://www.curitiba.pr.gov.br/servicos/cambio-verde-calendario-anual/544 -->
+        "Com este programa a prefeitura promove a troca de material reciclável por produtos hortifruti da época. A cada quatro quilos de lixo reciclável (papel, papelão, vidro, sucata ferrosa e não ferrosa) valem um quilo de frutas e verduras. Pode ser trocado também óleo vegetal e animal: a cada 4 litros de óleo vale 1kg de alimento."
+        <br>
+        <i>Projeto Vale Luz (Distrito Federal):</i> <!--https://g1.globo.com/df/distrito-federal/noticia/2023/04/04/projeto-troca-materiais-reciclaveis-por-descontos-na-conta-de-luz-no-df.ghtml-->
+        "O projeto da Neoenergia "Vale Luz" permite a troca de materiais recicláveis por descontos na conta de luz de consumidores do Distrito Federal. Os descartes são trocados por pontos para os usuários, que podem revertê-los em desconto na própria conta de luz ou em doações para entidades assistenciais. Por dez latas de alumínio ou 15 garrafas PET, o consumidor tem R$1 de desconto."
+    </div>
+    <div class="item">
+        <b>Em Maringá - Ecolix</b> <!--http://www.maringa.pr.gov.br/site/noticias/2023/01/23/para-facilitar-descarte-de-reciclaveis-prefeitura-altera-locais-com-ecolix/40993-->
+        <br>
+        "Uma das iniciativas do Programa Lixo Zero da Prefeitura de Maringá, o Ecolix, contêiner para recebimento de recicláveis, promove o reaproveitamento dos materiais."
+        <br>
+        "O secretário de Limpeza Urbana, Paulo Gustavo Ribas, afirma que além de uma solução sustentável e que facilita o descarte correto de resíduos, a iniciativa promove geração de renda para os empreendimentos de catadores de materiais recicláveis contratados pelo município. Os materiais recolhidos nos contêineres são destinados para as cooperativas."
+        <img class="image" src="./img/ecolix.jpeg" alt="">
+    </div>
+    <div class="item">
+        <b>Projetos que a escola pode realizar</b>
+        <br>
+        Alguns projetos que a escola poderia realizar para ajudar a comunidade, parecidos com os projetos mostrados nas páginas anteriores, seria fazer projetos com o intuito de ajudar instituições sociais. Um exemplo:
+        <br>
+        <i>Projeto: Tampinha Amiga:</i> <!--http://www.selosocial.com/projeto/6297-->
+        "A Associação de Pais e Amigos dos Excepcionais - APAE de Maringá, realiza o projeto Tampinha Amiga que consiste em unir esforços para a promoção da conscientização sócio ambiental e a geração de renda para a APAE de Maringá, por meio da reciclagem de tampas plásticas. O projeto se iniciará por meio do contato com o estabelecimento de escolas, igrejas, restaurantes e demais estabelecimentos comerciais e sociais. E na Instituição, algumas turmas de alunos utilizam até como material de apoio para trabalhar conteúdos do currículo escolar. Por meio desta iniciativa as pessoas ajudam a cuidar do meio ambiente, diminuindo o lixo que é acumulado, e ao mesmo tempo auxiliam uma Instituição que presta atendimento à comunidade  Maringaense.
+    </div>
     <main>
     </div>
 
